# aclaude

./: .editorconfig  .gitignore  .lefthook.yml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  build.rs  charter.md  deny.toml  install.sh  justfile  rustfmt.toml  sources.toml
.claude/rules/: bash.md  git-commits.md  rust.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  question.yml
.github/workflows/: ci.yml  codeql.yml  release-verify.yml  release.yml  scorecards.yml
Formula/: aclaude-a.rb  aclaude.rb
_kos/: kos.yaml
_kos/findings/: finding-001-rust-rewrite.yaml
cli/: eslint.config.js  package-lock.json  package.json
cli/scripts/: gen-version.ts
cli/src/: config.ts  hooks.ts  index.ts  persona.ts  session.ts  statusline.ts  telemetry.ts  updater.ts
cli/test/: config.test.ts
config/: defaults.toml  defaults.yaml  example.toml  example.yaml
docs/: agent-taxonomy.md  architecture.md  design-questions.md  session-management.md
docs/design/: portrait-distribution.md
docs/research/: cc-vs-sdk-20260316.md  rust-claude-reimplementations-20260410.md  sdk-passthrough-20260318.md  tui-parity-plan-20260410.md  tui-patterns-study-20260410.md  tui-prototype-plan-20260410.md  tui-prototype-plan-dual-mode-20260410.md
docs/security/: axios-supply-chain-2026-03-31.md
personas/themes/: a-team.yaml  alice-in-wonderland.yaml  ancient-philosophers.yaml  ancient-strategists.yaml  arthurian-mythos.yaml  avatar-the-last-airbender.yaml  babylon-5.yaml  battlestar-galactica.yaml  better-call-saul.yaml  black-sails.yaml  blade-runner.yaml  classical-composers.yaml  count-of-monte-cristo.yaml  cowboy-bebop.yaml  deadwood.yaml  dickens.yaml  doctor-who.yaml  don-quixote.yaml  enlightenment-thinkers.yaml  expeditionary-force.yaml  fargo.yaml  film-auteurs.yaml  foundation.yaml  futurama.yaml  gilligans-island.yaml  gothic-literature.yaml  great-gatsby.yaml  hannibal.yaml  harry-potter.yaml  his-dark-materials.yaml  historical-figures.yaml  hitchhikers-guide.yaml  imperial-radch.yaml  justified.yaml  legion-of-doom.yaml  les-miserables.yaml  lovecraft-mythos.yaml  mad-men.yaml  marvel-mcu.yaml  military-commanders.yaml  (+23 more)
scripts/: create-dmg.sh
src/: bridge.rs  config.rs  download.rs  error.rs  lib.rs  main.rs  paths.rs  persona.rs  petname.rs  portrait.rs  protocol.rs  protocol_ext.rs  resolve.rs  session.rs  session_cmd.rs  statusline.rs  updater.rs
tests/: persona_cli.rs
tmux/: start-session.sh
(+17 files in other folders)
