[package]
name = "forestage"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Opinionated Claude Code distribution with persona theming"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Config (TOML)
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "2"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# HTTP (self-update via GitHub releases)
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

# tmux control mode client
tmux-cmc = { git = "https://github.com/ArcavenAE/tmux-cmc", branch = "main" }

# TUI
ratatui = "0.30"
crossterm = "0.29"
ratatui-image = { version = "10.0", default-features = false, features = ["crossterm"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Diff rendering
similar = { version = "3", features = ["text"] }

# Clipboard (OSC 52 encoding)
base64 = "0.22"

# Async (bridge subprocess I/O)
tokio = { version = "1", features = ["sync", "rt", "macros", "io-util", "process", "time"] }

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
insta = { version = "1", features = ["yaml", "json"] }
tempfile = "3"

[lints.clippy]
cloned_instead_of_copied = "warn"
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
uninlined_format_args = "deny"

[lints.rust]
unsafe_code = "forbid"
